# http2-client-grpc-example

./: .gitignore  README.md  cabal.project  http2-client-grpc-example.cabal  prepare.sh  stack.yaml
app/: Main.hs
src/: Lib.hs  SimpleLib.hs
